exports[`test Child node (trusted svg children) -- dark theme class (color set with style option) 1`] = `
<div
  className="pe-icon pe-icon--regular    "
  style={
    Object {
      "color": "#fff",
    }
  }>
  <SVG>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
        }
      } />
  </SVG>
</div>
`;

exports[`test Child node (trusted svg children) 1`] = `
<div
  className="pe-icon pe-icon--regular    ">
  <SVG>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
        }
      } />
  </SVG>
</div>
`;

exports[`test Dark tone class + light theme class 1`] = `
<div
  className="pe-light-tone"
  style={
    Object {
      "background": "#fff",
    }
  }>
  <Icon
    svg={
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
          }
        } />
    } />
  <Icon
    className="tests-icon-themed-icon"
    svg={
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
          }
        } />
    } />
</div>
`;

exports[`test Dark tone class + light theme class 2`] = `
<div
  style={
    Object {
      "background": "#fff",
    }
  }>
  <Icon
    svg="<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>"
    tone="light" />
  <Icon
    className="tests-icon-themed-icon"
    svg="<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>"
    tone="light" />
</div>
`;

exports[`test No options 1`] = `
<div
  className="pe-icon pe-icon--regular    " />
`;

exports[`test Option: avatar (type large) 1`] = `
<div
  className="pe-icon pe-icon--large pe-icon--avatar   ">
  <img
    src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
</div>
`;

exports[`test Option: class 1`] = `
<div
  className="pe-icon pe-icon--regular    " />
`;

exports[`test Option: className 1`] = `
<div
  className="pe-icon pe-icon--regular    className-x" />
`;

exports[`test Option: content (trusted svg content) 1`] = `
<div
  className="pe-icon pe-icon--regular    ">
  <SVG
    content={
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
          }
        } />
    } />
</div>
`;

exports[`test Option: content 1`] = `
<div
  className="pe-icon pe-icon--regular    ">
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
      }
    } />
</div>
`;

exports[`test Option: element 1`] = `
<a
  className="pe-icon pe-icon--regular    " />
`;

exports[`test Option: id 1`] = `
<div
  className="pe-icon pe-icon--regular    "
  id="id-x" />
`;

exports[`test Option: src (image file) 1`] = `
<div
  className="pe-icon pe-icon--regular    ">
  <img
    src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
</div>
`;

exports[`test Option: src (svg file) 1`] = `
<div
  className="pe-icon pe-icon--regular    ">
  <img
    src="http://arthurclemens.github.io/assets/polythene/examples/recycle.svg" />
</div>
`;

exports[`test Option: style 1`] = `
<div
  className="pe-icon pe-icon--regular    "
  style={
    Object {
      "color": "#EF6C00",
    }
  }>
  <SVG
    $$typeof={Symbol(react.test.json)}
    children={null}
    props={
      Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
        },
      }
    }
    type="div" />
</div>
`;

exports[`test Option: type (large) 1`] = `
<div
  className="pe-icon pe-icon--large    ">
  <SVG
    $$typeof={Symbol(react.test.json)}
    children={null}
    props={
      Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
        },
      }
    }
    type="div" />
</div>
`;

exports[`test Option: type (medium) 1`] = `
<div
  className="pe-icon pe-icon--medium    ">
  <SVG
    $$typeof={Symbol(react.test.json)}
    children={null}
    props={
      Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
        },
      }
    }
    type="div" />
</div>
`;

exports[`test Option: type (regular) 1`] = `
<div
  className="pe-icon pe-icon--regular    ">
  <SVG
    $$typeof={Symbol(react.test.json)}
    children={null}
    props={
      Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
        },
      }
    }
    type="div" />
</div>
`;

exports[`test Option: type (small) 1`] = `
<div
  className="pe-icon pe-icon--small    ">
  <SVG
    $$typeof={Symbol(react.test.json)}
    children={null}
    props={
      Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
        },
      }
    }
    type="div" />
</div>
`;

exports[`test Themed (color and size) -- dark theme class 1`] = `
<div
  className="pe-icon pe-icon--regular    tests-icon-themed-icon">
  <SVG
    $$typeof={Symbol(react.test.json)}
    children={null}
    props={
      Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
        },
      }
    }
    type="div" />
</div>
`;

exports[`test Themed (color and size) 1`] = `
<div
  className="pe-icon pe-icon--regular    tests-icon-themed-icon">
  <SVG
    $$typeof={Symbol(react.test.json)}
    children={null}
    props={
      Object {
        "dangerouslySetInnerHTML": Object {
          "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\"/></svg>",
        },
      }
    }
    type="div" />
</div>
`;
